# blackjack-rl

./: .gitattributes  .gitignore  ARCHITECTURE.md  B2d_EXPERIMENTS.md  DESIGN.md  README.md  make_report.py  overnight_sweep.ps1  pyproject.toml  pyrightconfig.json  reeval_edges.py  report_generator.py  report_generator_dqn.py  run_notebooks.py
analysis/: 01_result_tabular_vs_dqn.ipynb  02_diagnosis.ipynb  03_stabilization.ipynb  04_variance_reduction.ipynb  05_representation.ipynb  06_encoding.ipynb  ch1_result.html  ch1_result.ipynb  ch2_diagnosis.html  ch2_diagnosis.ipynb  ch3_cornering.html  ch3_cornering.ipynb  ch4_representation.html  ch4_representation.ipynb  ch5_honesty.html  ch5_honesty.ipynb  ch6_complete_game.html  ch6_complete_game.ipynb  ch7_synthesis.html  ch7_synthesis.ipynb  embedding_viz.ipynb  per_cell_trajectories.ipynb  policy_investigation.ipynb  policy_investigation_v3.ipynb  report_full.html  runs.py  sweep_analysis.ipynb
blackjack_rl/: __init__.py  __main__.py  analysis_loader.py  config.py  dqn_experiment.py  env.py  evaluate.py  experiment.py  persistence.py  schedules.py  state.py  util.py
results/: reeval_results.json  reeval_results.txt
scripts/: eval_best_checkpoints.py  eval_bet_agent.py  make_docs.py  make_report.py  measure_bet_ladder.py  measure_edge_by_count.py  measure_sweep.py  measure_wonging.py  overnight_sweep.ps1  plot_bet_ladder.py  plot_edge_by_count.py  plot_sweep.py  plot_wonging.py  reeval_edges.py  refresh_notebook.py  report_generator.py  report_generator_dqn.py  report_generator_session.py  run_notebooks.py  scratch_eval_pt.py  scratch_gamma_sweep.py  scratch_oracle.py  scratch_real_sweep.py  train_bet_agent.py
tests/: conftest.py  test_bet_persistence.py  test_config.py  test_curriculum.py  test_dealer_baseline.py  test_deep_q.py  test_device.py  test_double_dqn.py  test_dqn.py  test_dqn_experiment.py  test_dqn_training.py  test_dqn_training_diagnostics.py  test_embedding.py  test_encoding.py  test_env.py  test_evaluate.py  test_experiment.py  test_exploring_starts.py  test_instrumentation.py  (+27 more)
(+78 files in other folders)
