[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack-rl"
version = "0.0.0"
description = "Phase 3 — an RL agent that learns blackjack, audited against the proven-optimal basic strategy."
requires-python = ">=3.13"
dependencies = [
    "numpy",
    # Added at Stage 5 (the DQN). Needs a cp313 wheel: torch >= 2.5 ships one.
    "torch>=2.5",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
# For the analysis notebooks in analysis/ (policy investigation, heatmaps, embedding/PCA).
analysis = ["pandas", "matplotlib", "ipykernel", "scikit-learn"]
report = ["seaborn", "reportlab", "nbconvert"]

# The Phase 2 engine is consumed via an editable install, not a declared dependency:
#   pip install -e ../../phase2-data/blackjack-sim
# (path deps are awkward with plain pip; see README + DESIGN.md D10).

[tool.setuptools.packages.find]
include = ["blackjack_rl*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true


